1) Обновление конфигурации 2) Фикс бага с запросом sql